--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 </head>
 
 <body>
+
+
     <header>
         <div class="logo"><img src="https://assets-global.website-files.com/621f2ae39342fe5b34cc196f/622063039e289f27bc601f67_OKB-Logo.png" alt="Logo"></div>
         <div class="social-list">
@@ -63,7 +65,8 @@
                   <li>
                     <div class="text">Remaining</div>
                     <div class="number">
-                      <div class="token-number" id="counter">132</div>
+                      <div class="token-number" id="counter"></div>
+                      
                     </div>
                   </li>
                   <li>
